<resources>
    <string name="app_name">宇医</string>

    <string name="firstpage_name">首页</string>
    <string name="measure_name">测量</string>
    <string name="ask_name">咨询</string>
    <string name="my_name">我的</string>

    <string name="edit_hint">搜索医院</string>
    <string name="beijing">北京</string>
    <string name="str_drugmall">我的药品</string>
    <string name="str_register">预约挂号</string>
    <string name="str_userone">用户1</string>
    <string name="str_usertwo">用户2</string>
    <string name="str_userthree">用户3</string>
    <string name="str_adduser">添加用户</string>
    <string name="str_manyuser">更多用户</string>

    <string name="str_usernomal">正常</string>
    <string name="str_userheightpress">收缩压(高压)</string>
    <string name="str_userlowpress">舒张压(低压)</string>
    <string name="str_usertemperature">体温</string>
    <string name="str_now_tem">当前体温</string>


    <string name="str_listview_tv_title">涿州市中医院</string>
    <string name="str_listview_tv_mess">涿州北大医院是集医疗、科研、预防、保健、康复为一体的现代化新型医院,医院设有妇科、计划生育</string>
    <string name="str_drug">常用药品</string>
    <string name="str_information">资讯</string>
    <string name="str_tv_item">999感冒灵,999感冒灵,999感冒灵,999感冒灵,999感冒灵,999感冒灵,</string>
    <string name="str_tv_price">¥38</string>

    <string name="str_tv_infor">资讯</string>
    <string name="str_tv_y">三级甲等</string>
    <string name="str_hospital">涿州市中医院</string>
    <string name="str_doctor">呼吸内科</string>

    <string name="str_blood">血压计</string>
    <string name="str_record">血压测量记录</string>
    <string name="str_add">添加其他设备</string>
    <string name="str_auto">自动输入</string>
    <string name="str_hand">手动输入</string>
    <string name="str_cancel">取消</string>

    <string name="str_current">当前体温</string>
    <string name="str_tem">体温</string>

    <string name="str_equip">连接设备</string>
    <string name="str_zx">扫描二维码连接设备</string>
    <string name="str_btn_zx">扫描二维码</string>
    <string name="str_prompt">*当前您的体温较高，请尽快就医</string>
    <string name="str_data">数据录入</string>
    <string name="str_add_per">添加其他成员</string>
    <string name="str_sure">保存</string>
    <string name="str_sure1">确定</string>
    <string name="str_blood_c">当前血压</string>
    <string name="str_blood_z">当前血压正常</string>
    <string name="str_hand_pro">内容不能为空</string>

    <string name="str_ask">咨询医院</string>
    <string name="str_ask_1">咨询</string>
    <string name="str_tel">电话:</string>
    <string name="str_tel_num">0312-4433225</string>
    <string name="str_km">5.2km</string>
    <string name="str_address">地址:河北省涿州市范阳中路12号</string>

    <string name="str_hospiytal_j">医院介绍</string>
    <string name="str_hospiytal_mess">涿州市中医院地处市中心范阳西路129号，市政府东侧，
        北京天桥至涿州的838路公共汽车通过门前，交通四通八达。医院占地50亩，建筑面积为11万平方米、
        开放床位1000张，全院职工1400人，专业技术人员900人。2009年医院投入2.6亿元兴建病房楼4.9万平方米。
        2011年医院又投入5亿元新建9.7万平方米的医技综合大楼，届时医院总建筑面积将达20万平方米。为了加快数字化医院建设，
        医院又投资近千万安装HIS系统。医院设有：骨科关节外科、脊柱外科、神经外科、普外胃肠外科、肝胆外科、泌尿外科、胸外科、
        心外科、腺体外科、妇科、产科、肿瘤科、放疗科、神经内科、呼吸内科、消化内科、内分泌科、心内科、肾内科、血液科、儿科、
        新生儿科、耳鼻喉科、口腔科、眼科、中医科、康复医学科、皮肤科、心理咨询门诊、急诊科、感染科、功能科、检验科、输血科、
        病理科、药剂科、介入室、内窥镜室、放疗科、等10个医技科室。1951年涿县建立卫生试验院，地址在观音堂，有医护人员34人。住院处设在县城西丁市口，有病床50张（其中接受志愿军伤病专设床30张），医生1人，护士6人。
        1956年，卫生试验院改称涿县人民医院，有医护人员67人，设床位35张，1958年，涿州县、新县、雄县、及涞水合并成为大涿县，涿县医院大部分人员和设备迁往高碑店，留涿州部分人员建精神病院，地址在西丁口内。
        1961年12月24日，涿县恢复原建置。涿县在精神病医院的基础上重建涿县医院，并从西丁口内迁往文庙。
        1961年至1985年，涿县医院一直在原有基础上徘徊发展。在科室划分上，并无十分明确的分工，主要以综合科室为主。分为妇产科、儿科、大内科、大外科和手术室，床位150张。
        1986年9月24日，撤县建市，县医院更名为涿州市医院，占地1.8万平方米，建筑面积9500平方米，设门诊部和住院处。
        1992年，有病床150张，职工175人，日平均门诊量200余人次，年住院4000余人次，业务收入254万元。
        1999年至2003年，由于管理不善、设备落后、技术人员的流失等各方面原因，使医院负债累累，举步维艰，发展步入低谷。
        2004年1月，经涿州市委批准，引入联合实业集团资金，对涿州市医院进行体制改革，改为股份制医院。</string>
    <string name="str_hospiytal_js">医院详情</string>
    <string name="str_consult">医患咨询</string>

    <string name="str_speech">语音咨询</string>
    <string name="str_video">视频咨询</string>
    <string name="str_char">文字咨询</string>

    <string name="str_li">李四</string>
    <string name="str_name2">用户名:18328887653</string>
    <string name="str_elec">电子病历</string>
    <string name="str_mess">消息</string>
    <string name="str_th">购物车</string>
    <string name="str_order">订单详情</string>
    <string name="str_home">家庭成员管理</string>
    <string name="str_userdetial">用户设备管理</string>
    <string name="str_user_address">收货地址</string>
    <string name="str_set">设置</string>

    <string name="str_user_edi">个人编辑</string>
    <string name="str_save">保存</string>
    <string name="str_head">头像</string>
    <string name="str_user_name">用户名</string>
    <string name="str_user_num">18328887653</string>
    <string name="str_user_sex">性别</string>
    <string name="str_user_boy">男</string>
    <string name="str_user_girl">女</string>
    <string name="str_user_age">年龄</string>
    <string name="str_user_nation">民族</string>
    <string name="str_user_bu">布依族</string>
    <string name="str_user_id">身份证号码</string>
    <string name="str_user_id_num">13238829983839280100</string>
    <string name="str_user_place">籍贯</string>
    <string name="str_user_place_mess">河南省新乡市</string>

    <string name="str_elec_title">电子病历</string>
    <string name="str_tv_name">李四病历</string>
    <string name="str_tv_date">2016-01-05</string>
    <string name="str_tv_look">病历查看</string>

    <string name="user_name">姓名</string>
    <string name="user_profession">职业</string>
    <string name="user_designer">设计师</string>
    <string name="user_merry">婚姻</string>
    <string name="user_merry_y">已婚</string>
    <string name="user_date">病历采集日期</string>
    <string name="user_now">现病史</string>

    <string name="contact_ours">联系我们</string>
    <string name="suggestion">意见反馈</string>
    <string name="about_ours">关于我们</string>
    <string name="exit">退出</string>

    <string name="details">资讯详情</string>
    <string name="hospital_jj">医院简介</string>

    <string name="doctor_date1">01/13</string>
    <string name="doctor_date2">01/14</string>
    <string name="doctor_date3">01/15</string>
    <string name="doctor_date4">01/16</string>
    <string name="doctor_date5">01/17</string>
    <string name="doctor_date6">01/18</string>
    <string name="doctor_date7">01/19</string>
    <string name="doctor_date_morning">上午</string>
    <string name="doctor_date_afternoon">下午</string>
    <string name="regi">挂号</string>
    <string name="doctor_num">余号 32</string>
    <string name="doctor_name">LIM</string>
    <string name="doctor_good_at">擅长: 哮喘的规范化诊断与治疗、慢性阻塞性肺病机械诊治、心脑血管疾病</string>
    <string name="doctor_job">主治医师</string>
    <string name="select_person">选择挂号人</string>
    <string name="select_person_name">李美丽(妈妈)</string>
    <string name="add_person">添加</string>
    <string name="perfect">去完善</string>
    <string name="prompt">提示</string>
    <string name="prompt_mess">你还没有完善个人信息无法挂号，\n现在去完善？</string>
    <string name="equitment_m">设备管理</string>
    <string name="equitment_connect">设备已连接</string>

    <string name="add_family_user">添加家庭用户</string>
    <string name="add_family_sure">确定</string>
    <string name="add_head">上传头像</string>
    <string name="home_relation">家人关系</string>
    <string name="tem_num">手&#8194;机&#8194;号</string>
    <string name="sex">性&#8194;&#8194;&#8194;&#8194;别</string>
    <string name="add_user_name">姓&#8194;&#8194;&#8194;&#8194;名</string>
    <string name="add_user_age">年&#8194;&#8194;&#8194;&#8194;龄</string>
    <string name="select">选填项</string>
    <string name="agree">同意此手机号账号查看我的家庭用户成员信息</string>

    <string name="my_data">我的数据分析</string>
    <string name="my_files">我的病历档案</string>
    <string name="myself_mess">个人信息</string>
    <string name="btn_delete">删除</string>
    <string name="btn_sure_delete">确定要删除此用户吗？</string>
    <string name="btn_equitment_delete">确定要删除此设备吗？</string>

    <string name="connect_wifi">连接WIFI</string>
    <string name="green_wifi">WIFI</string>
    <string name="green_password">密码</string>
    <string name="config_btn">配置</string>
    <string name="config_remind">连接wifi后点击配置按钮，连接设备</string>
    <string name="connect_wifi_remind">连接wifi失败，请您重试一次</string>

    <string name="blood_tv">血压</string>
    <string name="tem_tv">体温</string>
    <string name="tv_mess1">正常人体温一般为36~37°C</string>
    <string name="tv_mess2">发烧分为:</string>
    <string name="tv_mess3">低热: 37.5~38°C</string>
    <string name="tv_mess4">中等度热: 28.1~39°C</string>
    <string name="tv_mess5">高热: 39.1~41°C</string>
    <string name="tv_mess6">超高热: 41°以上</string>
    <string name="tv_mess7">&#8194;&#8194;&#8194;&#8194;收缩压在120~139毫米汞柱和舒张压在80~89毫米汞柱，是从理想血压到确诊高血压的过渡阶段。
    据统计临界高血压5年死亡率较血压正常值高2倍。对于临界高血压首先应用非药物疗法。除了上面介绍的措施外，还可以理疗、针灸，可收到良好的效果。
    </string>

    <string name="my_order">我的订单</string>
    <string name="drug_name">针叶樱桃维C咀嚼片</string>
    <string name="drug_spec">规格: 20粒/袋</string>
    <string name="drug_producer">生产商: 哈尔滨制药厂</string>
    <string name="drug_price">¥ 25</string>

    <string name="drug_order_num">订单号：12345678</string>
    <string name="drug_order_time">创建时间：2016-02-01  9:00</string>
    <string name="order_name">金大中</string>
    <string name="order_address">收货地址：河北省邢台市沙河县弯子镇西葫芦村103号</string>
    <string name="order_score">积分</string>
    <string name="order_voucher">代金券</string>
    <string name="order_expenses">运费</string>
    <string name="order_now_expenses">实时付款(含运费)</string>
    <string name="order_wait_pay">等待买家付款</string>

    <string name="clear_up_all">清除全部</string>
    <string name="doctor">医生</string>
    <string name="hang_up">挂断</string>
    <string name="photo">照片传输</string>

    <string name="locate_tv">定位</string>
    <string name="search_city">搜索城市</string>
    <string name="all_city">全部城市</string>
    <string name="current_locate">当前位置</string>
    <string name="xxx_city">正在定位...</string>
    <string name="search_result">抱歉,暂时没有找到相关城市</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--          lzh           -->

    <string name="ms_home_titleText">医药商城</string>
    <!--支持的配送范围-->
    <string name="ms_home_textDisc">目前只支持涿州市区范围</string>
    <!--医药商城搜索框提示的问题-->
    <string name="ms_home_textSearch">搜索药品</string>
    <!--医药商城常用药品-->
    <string name="ms_home_dailyM">常用药品</string>
    <!--医药商城滋补疗养-->
    <string name="ms_home_nutritiousM">滋补疗养</string>
    <string name="my_settings_aboutOurs_msg">宇医app，希望通过网上医疗的形式能够解决用户的一些医疗的基本需求，包括：测量监控自己及家人的健康数据；足不出户解决购药问题；提前预约专家挂号问题；在家与医生面对面交流，解决一些简单的问诊等</string>
    <string name="my_settings_aboutOurs_versionCode">当前版本号：1.0（wanyu2017）</string>
    <string name="my_settings_contactOur_phoneNum">0312-3850331</string>
    <string name="my_address_postcode">072750</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

     <string name="fuwu">
        敬告各位业主:\n
&#160;&#160;&#160;&#160;&#160;&#160;本服务为普通医学健康咨询,只能对业主的一些常见病提出医学建议.
因为中医诊治疾病需要望闻、问、切,西医需要望、触、叩、听和化验、超声、放射等检查,
本服务只能根据您所陈述的和我们视频时看到的进行分析,资料欠缺很多,
只能在当时提出一些医学建议,也很可能会告诉您到医院某科就诊,进行专科诊治.\n
&#160;&#160;&#160;&#160;&#160;&#160;我们医务人员会尽自己自己最大能力为您提供咨询服务,但也难免有让各位业主不满意之处,
请各位将我们医务人员工作欠缺之处在工作时间反馈到涿州中医医院医务部或打电话到3680284.
我们会根据您的陈述和保存的视频资料进行整改,提高我们的服务水平,将保障各位业主身体健康工作做好.

    </string>
</resources>
