<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_scroll_bg"
    tools:context="com.technology.yuyi.activity.UserEditorActivity">

    <RelativeLayout
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/editor_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/str_user_edi"
            android:textColor="@color/color_normal"
            android:textSize="17sp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/click_change_bgcolor"
            android:text="@string/str_save"
            android:textColor="@drawable/click_change_tvcolor"
            android:textSize="13sp" />
    </RelativeLayout>

    <View
        android:id="@+id/curr_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/user_title"
        android:background="@color/color_bg" />

    <RelativeLayout
        android:id="@+id/select_head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/curr_line"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">


        <com.technology.yuyi.myview.RoundImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/str_head"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_name_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/select_head"
        android:layout_marginTop="1dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/str_user_name"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/str_user_num"
            android:textColor="@color/color_press"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_sex_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/user_name_rl"
        android:layout_marginTop="1dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/str_user_sex"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/str_user_boy"
            android:textColor="@color/color_press"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_age_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_sex_rl"
        android:layout_marginTop="1dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/str_user_age"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/age_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:gravity="end"
            android:inputType="text"
            android:text="26"
            android:textColor="@color/color_press"
            android:textSize="13sp" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/user_id_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/user_age_rl"
        android:layout_marginTop="1dp"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/tv_id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/str_user_id"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/tv_id_name"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/str_user_id_num"
            android:textColor="@color/color_press"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_place_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/user_id_rl"
        android:layout_marginTop="1dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/str_user_place"
            android:textColor="@color/color_normal"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/str_user_place_mess"
            android:textColor="@color/color_press"
            android:textSize="13sp" />
    </RelativeLayout>


</RelativeLayout>
