<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp">

        <TextView
            android:id="@+id/select_per_tv"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@color/color_normal"
            android:textSize="20sp" />

        <View
            android:id="@+id/select_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/select_per_tv"
            android:background="@color/color_scroll_bg" />

        <TextView
            android:id="@+id/be_select_gridview"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@id/select_line"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:textColor="@color/color_normal"
            android:text="@string/prompt_mess"
            android:textSize="16sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/be_select_gridview">

            <TextView
                android:id="@+id/alert_sure_cancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/color_cancel"
                android:gravity="center"
                android:text="@string/str_cancel"
                android:textColor="@color/color_press"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/alert_sure_prompt"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/color_username"
                android:gravity="center"
                android:text="@string/perfect"
                android:textColor="@color/color_white"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>