<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btn_auto"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/click_change_bgcolor"
        android:text="@string/str_auto"
        android:textColor="@drawable/click_change_tvcolor" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_hand"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/click_change_bgcolor"
        android:text="@string/str_hand"
        android:textColor="@drawable/click_change_tvcolor"  />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/click_change_bgcolor"
        android:text="@string/str_cancel"
        android:textColor="@drawable/click_change_tvcolor" />
</LinearLayout>