<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/select_per_tv"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/btn_sure_delete"
            android:textColor="@color/color_normal"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_per_tv">

            <TextView
                android:id="@+id/alert_cancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/color_cancel"
                android:gravity="center"
                android:text="@string/str_cancel"
                android:textColor="@color/color_press"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/alert_sure"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/color_username"
                android:gravity="center"
                android:text="@string/str_sure"
                android:textColor="@color/color_white"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>